[gd_scene load_steps=19 format=4 uid="uid://c5y8ojbtqxs3g"]

[ext_resource type="Texture2D" uid="uid://p7c5lsbl5wks" path="res://Level1/levelbackground.png" id="1_66s1q"]
[ext_resource type="Texture2D" uid="uid://bsqvf1w6ct8r2" path="res://Level1/tilemap1-Sheet.png" id="2_atbnm"]
[ext_resource type="PackedScene" uid="uid://dlxck3lxxee1q" path="res://generalscenes/chairPlayer.tscn" id="3_4yq6w"]
[ext_resource type="PackedScene" uid="uid://bhnothahvptbf" path="res://generalscenes/level_1boss.tscn" id="4_r2i3b"]
[ext_resource type="Script" path="res://generalscenes/level_1_boss.gd" id="5_rggpu"]
[ext_resource type="PackedScene" uid="uid://bxk83kany2356" path="res://generalscenes/targetAnim.tscn" id="6_ibrlq"]
[ext_resource type="PackedScene" uid="uid://b1cgx30lv4sug" path="res://generalscenes/raindropATK.tscn" id="7_qmt4o"]
[ext_resource type="PackedScene" uid="uid://bta858wsqgsjd" path="res://generalscenes/lightning_atk.tscn" id="8_qdeqx"]
[ext_resource type="Texture2D" uid="uid://c7bfwi3jgy142" path="res://healthbarInside5.png" id="9_dyiga"]
[ext_resource type="Texture2D" uid="uid://c046e5jhvqek7" path="res://healthbar.png" id="9_hrdq3"]
[ext_resource type="Texture2D" uid="uid://bnayrnf45nmu0" path="res://healthbarhealth.png" id="10_pcunl"]
[ext_resource type="Texture2D" uid="uid://d33v282lem3cg" path="res://healthbarInside4.png" id="11_6vnql"]
[ext_resource type="Texture2D" uid="uid://bcw5luv60clpu" path="res://healthbarstamina.png" id="11_u2rw0"]
[ext_resource type="Script" path="res://Level1/rotation_bar.gd" id="11_ugj26"]
[ext_resource type="Texture2D" uid="uid://8duxhykicw36" path="res://bossHealthBarBase.png" id="14_is1kk"]
[ext_resource type="Texture2D" uid="uid://cgr8htbco7weu" path="res://bossHealthBar.png" id="15_5qddf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oqji1"]
texture = ExtResource("2_atbnm")
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0

[sub_resource type="TileSet" id="TileSet_pqp1s"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_oqji1")

[node name="Level1" type="Node2D"]

[node name="Node" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="Node"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1919.0
offset_top = -1613.0
offset_right = 1957.0
offset_bottom = 1505.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_66s1q")
stretch_mode = 1

[node name="TileMapLayer" type="TileMapLayer" parent="Node"]
texture_filter = 1
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAALAAwAAAADAAEAAAALAAsAAAADAAEAAAALAAoAAAADAAEAAAALAAkAAAADAAEAAAALAAgAAAADAAEAAAALAAcAAAADAAEAAAALAAYAAAADAAEAAAALAAUAAAADAAEAAAALAAQAAAADAAEAAAALAAMAAAADAAEAAAALAAIAAAADAAEAAAALAAEAAAADAAEAAAAKAAwAAAACAAIAAAAKAAsAAAACAAIAAAAKAAoAAAACAAIAAAAKAAkAAAAAAAMAAAAKAAgAAAACAAIAAAAKAAcAAAACAAIAAAAKAAYAAAACAAIAAAAKAAUAAAACAAIAAAAKAAQAAAACAAIAAAAKAAMAAAACAAIAAAAKAAIAAAACAAIAAAAKAAEAAAACAAIAAAAMAAEAAAACAAIAAAAMAAIAAAAAAAMAAAAMAAMAAAACAAIAAAAMAAQAAAACAAIAAAAMAAUAAAACAAIAAAAMAAYAAAACAAIAAAAMAAcAAAACAAIAAAAMAAgAAAACAAIAAAAMAAkAAAACAAIAAAAMAAoAAAACAAIAAAAMAAsAAAAAAAMAAAAMAAwAAAACAAIAAAAJAAwAAAACAAIAAAAJAAsAAAACAAIAAAAJAAoAAAACAAIAAAAJAAkAAAACAAIAAAAJAAgAAAACAAIAAAAJAAcAAAACAAIAAAAJAAYAAAAAAAMAAAAJAAUAAAACAAIAAAAJAAQAAAACAAIAAAAJAAMAAAACAAIAAAAJAAIAAAACAAIAAAAJAAEAAAACAAIAAAANAAEAAAACAAIAAAANAAIAAAACAAIAAAANAAMAAAACAAIAAAANAAQAAAACAAIAAAANAAUAAAACAAIAAAANAAYAAAACAAIAAAANAAcAAAACAAIAAAANAAgAAAACAAIAAAANAAkAAAACAAIAAAANAAoAAAACAAIAAAANAAsAAAACAAIAAAANAAwAAAACAAIAAAAOAAwAAAACAAIAAAAOAAsAAAACAAIAAAAOAAoAAAACAAIAAAAOAAkAAAACAAIAAAAOAAgAAAACAAIAAAAOAAcAAAACAAIAAAAOAAYAAAACAAIAAAAOAAUAAAACAAIAAAAOAAQAAAACAAIAAAAOAAMAAAACAAIAAAAOAAIAAAACAAIAAAAOAAEAAAACAAIAAAAIAAwAAAACAAIAAAAIAAsAAAACAAIAAAAIAAoAAAACAAIAAAAIAAkAAAACAAIAAAAIAAgAAAACAAIAAAAIAAcAAAACAAIAAAAIAAYAAAACAAIAAAAIAAUAAAACAAIAAAAIAAQAAAACAAIAAAAIAAMAAAACAAIAAAAIAAIAAAACAAIAAAAIAAEAAAACAAIAAAAPAAwAAAAAAAIAAAAPAAsAAAAAAAIAAAAPAAoAAAAAAAIAAAAPAAkAAAAAAAIAAAAPAAgAAAAAAAIAAAAPAAcAAAAAAAIAAAAPAAYAAAAAAAIAAAAPAAUAAAAAAAIAAAAPAAQAAAAAAAIAAAAPAAMAAAAAAAIAAAAPAAIAAAAAAAIAAAAPAAEAAAAAAAIAAAAHAAwAAAABAAIAAAAHAAsAAAABAAIAAAAHAAoAAAABAAIAAAAHAAkAAAABAAIAAAAHAAgAAAABAAIAAAAHAAcAAAABAAIAAAAHAAYAAAABAAIAAAAHAAUAAAABAAIAAAAHAAQAAAABAAIAAAAHAAMAAAABAAIAAAAHAAIAAAABAAIAAAAHAAEAAAABAAIAAAAGAAEAAAADAAIAAAAGAAIAAAADAAIAAAAGAAMAAAADAAIAAAAGAAQAAAADAAIAAAAGAAUAAAADAAIAAAAGAAYAAAADAAIAAAAGAAcAAAADAAIAAAAGAAgAAAADAAIAAAAGAAkAAAADAAIAAAAGAAoAAAADAAIAAAAGAAsAAAADAAIAAAAGAAwAAAADAAIAAAAQAAwAAAADAAIAAAAQAAsAAAADAAIAAAAQAAoAAAADAAIAAAAQAAkAAAADAAIAAAAQAAgAAAADAAIAAAAQAAcAAAADAAIAAAAQAAYAAAADAAIAAAAQAAUAAAADAAIAAAAQAAQAAAADAAIAAAAQAAMAAAADAAIAAAAQAAIAAAADAAIAAAAQAAEAAAADAAIAAAAKAA0AAAACAAIAAAALAA0AAAADAAEAAAAMAA0AAAACAAIAAAAJAA0AAAACAAIAAAAIAA0AAAACAAIAAAAHAA0AAAABAAIAAAANAA0AAAACAAIAAAAOAA0AAAACAAIAAAAPAA0AAAAAAAIAAAAGAA0AAAADAAIAAAAQAA0AAAADAAIAAAARAA0AAAADAAIAAAASAAwAAAADAAIAAAATAAsAAAADAAIAAAAFAA0AAAADAAIAAAAEAAwAAAADAAIAAAADAAsAAAADAAIAAAADAAoAAAADAAIAAAADAAkAAAADAAIAAAADAAgAAAADAAIAAAADAAcAAAADAAIAAAADAAYAAAADAAIAAAADAAUAAAADAAIAAAADAAQAAAADAAIAAAATAAoAAAADAAIAAAATAAkAAAADAAIAAAATAAgAAAADAAIAAAATAAcAAAADAAIAAAATAAYAAAADAAIAAAATAAUAAAADAAIAAAATAAQAAAADAAIAAAADAAMAAAADAAIAAAATAAMAAAADAAIAAAASAAIAAAADAAIAAAARAAEAAAADAAIAAAAEAAIAAAADAAIAAAAFAAEAAAADAAIAAAAGAAAAAAADAAIAAAAHAAAAAAABAAIAAAAIAAAAAAACAAIAAAAJAAAAAAACAAIAAAAKAAAAAAACAAIAAAALAAAAAAADAAEAAAAMAAAAAAACAAIAAAANAAAAAAACAAIAAAAOAAAAAAACAAIAAAAPAAAAAAAAAAIAAAAQAAAAAAADAAIAAAARAAIAAAADAAIAAAARAAMAAAADAAIAAAARAAQAAAADAAIAAAARAAUAAAADAAIAAAARAAYAAAADAAIAAAARAAcAAAADAAIAAAARAAgAAAADAAIAAAARAAkAAAADAAIAAAARAAoAAAADAAIAAAARAAsAAAADAAIAAAARAAwAAAADAAIAAAASAAsAAAADAAIAAAASAAoAAAADAAIAAAASAAkAAAADAAIAAAASAAgAAAADAAIAAAASAAcAAAADAAIAAAASAAYAAAADAAIAAAASAAUAAAADAAIAAAASAAQAAAADAAIAAAASAAMAAAADAAIAAAAFAAIAAAADAAIAAAAFAAMAAAADAAIAAAAFAAQAAAADAAIAAAAFAAUAAAADAAIAAAAFAAYAAAADAAIAAAAFAAcAAAADAAIAAAAFAAgAAAADAAIAAAAFAAkAAAADAAIAAAAFAAoAAAADAAIAAAAFAAsAAAADAAIAAAAFAAwAAAADAAIAAAAEAAsAAAADAAIAAAAEAAoAAAADAAIAAAAEAAkAAAADAAIAAAAEAAgAAAADAAIAAAAEAAcAAAADAAIAAAAEAAYAAAADAAIAAAAEAAUAAAADAAIAAAAEAAQAAAADAAIAAAAEAAMAAAADAAIAAAADAAIAAAADAAIAAAAEAAEAAAADAAIAAAAFAAAAAAADAAIAAAARAAAAAAADAAIAAAASAAEAAAADAAIAAAATAAIAAAADAAIAAAADAAEAAAADAAIAAAADAAAAAAADAAIAAAATAAEAAAADAAIAAAATAAAAAAADAAIAAAAEAAAAAAADAAIAAAASAAAAAAADAAIAAAAIAA4AAAACAAIAAAAOAA4AAAACAAIAAAALAA4AAAADAAEAAAAJAA4AAAACAAIAAAAKAA4AAAACAAIAAAANAA4AAAACAAIAAAAMAA4AAAACAAIAAAAHAA4AAAABAAIAAAAGAA4AAAADAAIAAAAQAA4AAAADAAIAAAAPAA4AAAAAAAIAAAAHAA8AAAABAAIAAAAIAA8AAAACAAIAAAAJAA8AAAACAAIAAAAKAA8AAAACAAIAAAALAA8AAAADAAEAAAAMAA8AAAACAAIAAAANAA8AAAACAAIAAAAOAA8AAAACAAIAAAAPAA8AAAAAAAIAAAAQAA8AAAADAAIAAAAGAA8AAAADAAIAAAAFAA8AAAADAAIAAAAEAA4AAAADAAIAAAADAA0AAAADAAIAAAAFAA4AAAADAAIAAAAEAA0AAAADAAIAAAADAAwAAAADAAIAAAARAA4AAAADAAIAAAASAA0AAAADAAIAAAATAAwAAAADAAIAAAARAA8AAAADAAIAAAASAA4AAAADAAIAAAATAA0AAAADAAIAAAACAAwAAAADAAIAAAABAAsAAAADAAIAAAACAAsAAAADAAIAAAABAAoAAAADAAIAAAABAAkAAAADAAIAAAABAAgAAAADAAIAAAABAAcAAAADAAIAAAABAAYAAAADAAIAAAABAAUAAAADAAIAAAABAAQAAAADAAIAAAABAAMAAAADAAIAAAABAAIAAAADAAIAAAABAAEAAAADAAIAAAAVAAEAAAADAAIAAAAVAAIAAAADAAIAAAAVAAMAAAADAAIAAAAVAAQAAAADAAIAAAAVAAUAAAADAAIAAAAVAAYAAAADAAIAAAAVAAcAAAADAAIAAAAVAAgAAAADAAIAAAAVAAkAAAADAAIAAAAVAAoAAAADAAIAAAAVAAsAAAADAAIAAAAUAAwAAAADAAIAAAAUAAsAAAADAAIAAAAUAAoAAAADAAIAAAAUAAkAAAADAAIAAAAUAAgAAAADAAIAAAAUAAcAAAADAAIAAAAUAAYAAAADAAIAAAAUAAUAAAADAAIAAAAUAAQAAAADAAIAAAAUAAMAAAADAAIAAAAUAAIAAAADAAIAAAAUAAEAAAADAAIAAAACAAEAAAADAAIAAAACAAIAAAADAAIAAAACAAMAAAADAAIAAAACAAQAAAADAAIAAAACAAUAAAADAAIAAAACAAYAAAADAAIAAAACAAcAAAADAAIAAAACAAgAAAADAAIAAAACAAkAAAADAAIAAAACAAoAAAADAAIAAAAUAAAAAAADAAIAAAACAAAAAAADAAIAAAADAP//AAADAAIAAAAEAP7/AAADAAIAAAAFAP3/AAADAAIAAAAGAPz/AAADAAIAAAATAP//AAADAAIAAAASAP7/AAADAAIAAAARAP3/AAADAAIAAAAQAPz/AAADAAIAAAALAPz/AAADAAEAAAAHAPz/AAABAAIAAAAIAPz/AAACAAIAAAAJAPz/AAACAAIAAAAKAPz/AAAAAAMAAAAMAPz/AAACAAIAAAANAPz/AAACAAIAAAAOAPz/AAACAAIAAAAPAPz/AAAAAAIAAAASAP//AAADAAIAAAARAP//AAADAAIAAAAQAP//AAADAAIAAAAPAP//AAAAAAIAAAAOAP//AAACAAIAAAANAP//AAACAAIAAAAMAP//AAACAAIAAAALAP//AAADAAEAAAAKAP//AAACAAIAAAAJAP//AAACAAIAAAAIAP//AAACAAIAAAAHAP//AAABAAIAAAAGAP//AAADAAIAAAAFAP//AAADAAIAAAAEAP//AAADAAIAAAAFAP7/AAADAAIAAAAGAP7/AAADAAIAAAAHAP7/AAABAAIAAAAIAP7/AAACAAIAAAAJAP7/AAACAAIAAAAKAP7/AAACAAIAAAALAP7/AAADAAEAAAAMAP7/AAACAAIAAAANAP7/AAACAAIAAAAOAP7/AAACAAIAAAAPAP7/AAAAAAIAAAAQAP7/AAADAAIAAAARAP7/AAADAAIAAAAQAP3/AAADAAIAAAAPAP3/AAAAAAIAAAAOAP3/AAACAAIAAAANAP3/AAACAAIAAAAMAP3/AAACAAIAAAALAP3/AAADAAEAAAAKAP3/AAACAAIAAAAJAP3/AAACAAIAAAAIAP3/AAACAAIAAAAHAP3/AAABAAIAAAAGAP3/AAADAAIAAAABAAAAAAADAAIAAAACAP//AAADAAIAAAADAP7/AAADAAIAAAAEAP3/AAADAAIAAAAFAPz/AAADAAIAAAAGAPv/AAADAAIAAAAHAPv/AAABAAIAAAAIAPv/AAACAAIAAAAJAPv/AAACAAIAAAAKAPv/AAACAAIAAAALAPv/AAADAAEAAAAMAPv/AAACAAIAAAANAPv/AAACAAIAAAAOAPv/AAACAAIAAAAPAPv/AAAAAAIAAAAQAPv/AAADAAIAAAARAPz/AAADAAIAAAASAP3/AAADAAIAAAATAP7/AAADAAIAAAAUAP//AAADAAIAAAAVAAAAAAADAAIAAAAVAP//AAADAAIAAAAUAP7/AAADAAIAAAATAP3/AAADAAIAAAASAPz/AAADAAIAAAARAPv/AAADAAIAAAAFAPv/AAADAAIAAAAEAPz/AAADAAIAAAADAP3/AAADAAIAAAACAP7/AAADAAIAAAABAP//AAADAAIAAAAbAP//AAADAAAAAAAbAAAAAAADAAAAAAAbAAEAAAADAAAAAAAbAAIAAAADAAAAAAAbAAMAAAADAAAAAAAbAAQAAAADAAAAAAAbAAUAAAADAAAAAAAbAAYAAAADAAAAAAAbAAcAAAADAAAAAAAbAAgAAAADAAAAAAAbAAkAAAADAAAAAAAbAAoAAAADAAAAAAAbAAsAAAADAAAAAAD7////AAADAAAAAAD7/wAAAAADAAAAAAD7/wEAAAADAAAAAAD7/wIAAAADAAAAAAD7/wMAAAADAAAAAAD7/wQAAAADAAAAAAD7/wUAAAADAAAAAAD7/wYAAAADAAAAAAD7/wcAAAADAAAAAAD7/wgAAAADAAAAAAD7/wkAAAADAAAAAAD7/woAAAADAAAAAAD7/wsAAAADAAAAAAAFAPX/AAADAAAAAAAGAPX/AAADAAAAAAAHAPX/AAADAAAAAAAIAPX/AAADAAAAAAAJAPX/AAADAAAAAAAKAPX/AAADAAAAAAALAPX/AAADAAAAAAAMAPX/AAADAAAAAAANAPX/AAADAAAAAAAOAPX/AAADAAAAAAAPAPX/AAADAAAAAAAQAPX/AAADAAAAAAARAPX/AAADAAAAAAAGABUAAAADAAAAAAAHABUAAAADAAAAAAAIABUAAAADAAAAAAAJABUAAAADAAAAAAAKABUAAAADAAAAAAALABUAAAADAAAAAAAMABUAAAADAAAAAAANABUAAAADAAAAAAAOABUAAAADAAAAAAAPABUAAAADAAAAAAAQABUAAAADAAAAAAARABUAAAAAAAEAAAAFABUAAAACAAAAAAD8/wwAAAADAAAAAAD8/w0AAAADAAAAAAAEABQAAAADAAAAAAADABQAAAADAAAAAAD8/w4AAAACAAAAAAACABQAAAACAAAAAAD9/w8AAAADAAAAAAD9/xAAAAACAAAAAAABABMAAAADAAAAAAAAABMAAAACAAAAAAD//xIAAAACAAAAAAD+/xEAAAACAAAAAAASABQAAAADAAAAAAATABQAAAADAAAAAAAUABQAAAAAAAEAAAAaAAwAAAADAAAAAAAaAA0AAAADAAAAAAAaAA4AAAAAAAEAAAAZAA8AAAADAAAAAAAZABAAAAAAAAEAAAAVABMAAAADAAAAAAAWABMAAAAAAAEAAAAXABIAAAAAAAEAAAAYABEAAAAAAAEAAAAaAP7/AAADAAAAAAAaAP3/AAADAAAAAAAaAPz/AAADAAAAAAD8//7/AAADAAAAAAD8//3/AAADAAAAAAD8//z/AAADAAAAAAAEAPb/AAADAAAAAAADAPb/AAADAAAAAAACAPb/AAADAAAAAAASAPb/AAADAAAAAAATAPb/AAADAAAAAAAUAPb/AAADAAAAAAABAPf/AAADAAAAAAAAAPf/AAADAAAAAAD9//v/AAADAAAAAAD9//r/AAADAAAAAAD+//n/AAADAAAAAAD///j/AAADAAAAAAAVAPf/AAADAAAAAAAWAPf/AAADAAAAAAAZAPv/AAADAAAAAAAZAPr/AAADAAAAAAAYAPn/AAADAAAAAAAXAPj/AAADAAAAAAALABAAAAADAAEAAAALABEAAAADAAEAAAALABIAAAADAAEAAAALABMAAAADAAEAAAALABQAAAADAAEAAAALAPr/AAADAAEAAAALAPn/AAADAAEAAAALAPj/AAADAAEAAAALAPf/AAADAAEAAAALAPb/AAADAAEAAAAHAPr/AAABAAIAAAAHAPn/AAABAAIAAAAIAPn/AAACAAIAAAAIAPr/AAACAAIAAAAJAPr/AAACAAIAAAAKAPr/AAACAAIAAAAKAPn/AAACAAIAAAAJAPn/AAACAAIAAAAJAPj/AAACAAIAAAAIAPj/AAACAAIAAAAIAPf/AAACAAIAAAAJAPf/AAACAAIAAAAJAPb/AAACAAIAAAAIAPb/AAACAAIAAAAKAPb/AAACAAIAAAAKAPf/AAACAAIAAAAKAPj/AAACAAIAAAAMAPb/AAACAAIAAAAMAPf/AAACAAIAAAAMAPj/AAACAAIAAAAMAPn/AAACAAIAAAAMAPr/AAACAAIAAAANAPr/AAACAAIAAAANAPn/AAACAAIAAAANAPj/AAACAAIAAAANAPf/AAACAAIAAAANAPb/AAACAAIAAAAOAPb/AAACAAIAAAAOAPf/AAACAAIAAAAOAPj/AAACAAIAAAAOAPn/AAACAAIAAAAOAPr/AAACAAIAAAAHAPj/AAABAAIAAAAHAPf/AAABAAIAAAAHAPb/AAABAAIAAAAHABAAAAABAAIAAAAHABEAAAABAAIAAAAHABIAAAABAAIAAAAHABMAAAABAAIAAAAHABQAAAABAAIAAAAPAPb/AAAAAAIAAAAPAPf/AAAAAAIAAAAPAPj/AAAAAAIAAAAPAPn/AAAAAAIAAAAPAPr/AAAAAAIAAAAPABAAAAAAAAIAAAAPABEAAAAAAAIAAAAPABIAAAAAAAIAAAAPABMAAAAAAAIAAAAPABQAAAAAAAIAAAAKABAAAAACAAIAAAAKABEAAAACAAIAAAAKABIAAAACAAIAAAAKABMAAAACAAIAAAAKABQAAAACAAIAAAAJABQAAAACAAIAAAAIABQAAAACAAIAAAAIABMAAAACAAIAAAAIABIAAAACAAIAAAAIABEAAAACAAIAAAAIABAAAAACAAIAAAAJABAAAAACAAIAAAAJABEAAAACAAIAAAAJABIAAAACAAIAAAAJABMAAAACAAIAAAAOABAAAAACAAIAAAANABAAAAACAAIAAAAMABAAAAACAAIAAAAMABEAAAACAAIAAAANABEAAAACAAIAAAAOABEAAAACAAIAAAAOABIAAAACAAIAAAAOABMAAAACAAIAAAANABMAAAACAAIAAAANABIAAAACAAIAAAAMABIAAAACAAIAAAAMABMAAAACAAIAAAAOABQAAAACAAIAAAANABQAAAACAAIAAAAMABQAAAACAAIAAAAQAPr/AAADAAIAAAAQAPn/AAADAAIAAAAQAPj/AAADAAIAAAAQAPf/AAADAAIAAAAQAPb/AAADAAIAAAARAPb/AAADAAIAAAARAPf/AAADAAIAAAARAPj/AAADAAIAAAARAPn/AAADAAIAAAARAPr/AAADAAIAAAASAPv/AAADAAIAAAASAPr/AAADAAIAAAASAPn/AAADAAIAAAASAPj/AAADAAIAAAASAPf/AAADAAIAAAAWAP//AAADAAIAAAATAPz/AAADAAIAAAAUAPz/AAADAAIAAAAUAPv/AAADAAIAAAATAPv/AAADAAIAAAATAPr/AAADAAIAAAATAPn/AAADAAIAAAATAPj/AAADAAIAAAATAPf/AAADAAIAAAAUAPf/AAADAAIAAAAUAPj/AAADAAIAAAAUAPn/AAADAAIAAAAUAPr/AAADAAIAAAAVAPv/AAADAAIAAAAVAPz/AAADAAIAAAAVAP3/AAADAAIAAAAUAP3/AAADAAIAAAAVAPj/AAADAAIAAAAWAPj/AAADAAIAAAAWAPn/AAADAAIAAAAWAPr/AAADAAIAAAAVAPr/AAADAAIAAAAVAPn/AAADAAIAAAAXAPn/AAADAAIAAAAXAPr/AAADAAIAAAAYAPr/AAADAAIAAAAYAPv/AAADAAIAAAAXAPv/AAADAAIAAAAWAPv/AAADAAIAAAAVAP7/AAADAAIAAAAWAP7/AAADAAIAAAAWAP3/AAADAAIAAAAWAPz/AAADAAIAAAAXAPz/AAADAAIAAAAYAPz/AAADAAIAAAAZAPz/AAADAAIAAAAZAP3/AAADAAIAAAAYAP3/AAADAAIAAAAXAP3/AAADAAIAAAAXAP7/AAADAAIAAAAYAP7/AAADAAIAAAAZAP7/AAADAAIAAAAZAP//AAADAAIAAAAaAP//AAADAAIAAAAYAP//AAADAAIAAAAXAP//AAADAAIAAAAWAAAAAAADAAIAAAAWAAoAAAADAAIAAAAWAAkAAAADAAIAAAAWAAsAAAADAAIAAAAXAAkAAAADAAIAAAAXAAgAAAADAAIAAAAXAAcAAAADAAIAAAAXAAYAAAADAAIAAAAXAAUAAAADAAIAAAAXAAQAAAADAAIAAAAXAAMAAAADAAIAAAAXAAIAAAADAAIAAAAXAAEAAAADAAIAAAAXAAAAAAADAAIAAAAWAAEAAAADAAIAAAAWAAgAAAADAAIAAAAWAAcAAAADAAIAAAAWAAYAAAADAAIAAAAWAAUAAAADAAIAAAAWAAQAAAADAAIAAAAWAAMAAAADAAIAAAAWAAIAAAADAAIAAAAYAAAAAAADAAIAAAAZAAAAAAADAAIAAAAaAAAAAAADAAIAAAAaAAEAAAADAAIAAAAaAAIAAAADAAIAAAAaAAMAAAADAAIAAAAaAAQAAAADAAIAAAAaAAUAAAADAAIAAAAaAAYAAAADAAIAAAAaAAcAAAADAAIAAAAaAAgAAAADAAIAAAAaAAkAAAADAAIAAAAaAAoAAAADAAIAAAAaAAsAAAADAAIAAAAZAAsAAAADAAIAAAAYAAsAAAADAAIAAAAXAAsAAAADAAIAAAAXAAoAAAADAAIAAAAYAAoAAAADAAIAAAAZAAoAAAADAAIAAAAZAAkAAAADAAIAAAAZAAgAAAADAAIAAAAZAAcAAAADAAIAAAAZAAYAAAADAAIAAAAZAAUAAAADAAIAAAAZAAQAAAADAAIAAAAZAAMAAAADAAIAAAAZAAIAAAADAAIAAAAZAAEAAAADAAIAAAAYAAEAAAADAAIAAAAYAAIAAAADAAIAAAAYAAMAAAADAAIAAAAYAAQAAAADAAIAAAAYAAUAAAADAAIAAAAYAAYAAAADAAIAAAAYAAcAAAADAAIAAAAYAAgAAAADAAIAAAAYAAkAAAADAAIAAAAZAAwAAAADAAIAAAAYAAwAAAADAAIAAAAXAAwAAAADAAIAAAAWAAwAAAADAAIAAAAVAAwAAAADAAIAAAAUAA0AAAADAAIAAAAVAA0AAAADAAIAAAAWAA0AAAADAAIAAAAXAA0AAAADAAIAAAAYAA0AAAADAAIAAAAZAA0AAAADAAIAAAAZAA4AAAADAAIAAAAYAA4AAAADAAIAAAAXAA4AAAADAAIAAAAWAA4AAAADAAIAAAAVAA4AAAADAAIAAAAUAA4AAAADAAIAAAATAA4AAAADAAIAAAASAA8AAAADAAIAAAATAA8AAAADAAIAAAAUAA8AAAADAAIAAAAVAA8AAAADAAIAAAAWAA8AAAADAAIAAAAXAA8AAAADAAIAAAAQABAAAAADAAIAAAARABAAAAADAAIAAAASABAAAAADAAIAAAATABAAAAADAAIAAAAUABAAAAADAAIAAAAVABAAAAADAAIAAAAWABAAAAADAAIAAAAXABAAAAADAAIAAAAYABAAAAADAAIAAAAYAA8AAAADAAIAAAAWABEAAAADAAIAAAAVABEAAAADAAIAAAAUABEAAAADAAIAAAATABEAAAADAAIAAAASABEAAAADAAIAAAARABEAAAADAAIAAAAQABEAAAADAAIAAAAXABEAAAADAAIAAAAVABIAAAADAAIAAAAUABIAAAADAAIAAAATABIAAAADAAIAAAASABIAAAADAAIAAAARABIAAAADAAIAAAAQABIAAAADAAIAAAAWABIAAAADAAIAAAAQABMAAAADAAIAAAARABMAAAADAAIAAAASABMAAAADAAIAAAATABMAAAADAAIAAAAUABMAAAADAAIAAAARABQAAAADAAIAAAAQABQAAAADAAIAAAAEAPv/AAADAAIAAAADAPv/AAADAAIAAAACAPv/AAADAAIAAAABAPv/AAADAAIAAAAAAPv/AAADAAIAAAD///v/AAADAAIAAAD+//v/AAADAAIAAAD+//r/AAADAAIAAAD///r/AAADAAIAAAAAAPr/AAADAAIAAAABAPr/AAADAAIAAAACAPr/AAADAAIAAAADAPr/AAADAAIAAAAEAPr/AAADAAIAAAAFAPr/AAADAAIAAAAGAPr/AAADAAIAAAAGAPn/AAADAAIAAAAGAPj/AAADAAIAAAAGAPf/AAADAAIAAAAGAPb/AAADAAIAAAAFAPb/AAADAAIAAAAFAPf/AAADAAIAAAAFAPj/AAADAAIAAAAFAPn/AAADAAIAAAAEAPn/AAADAAIAAAADAPn/AAADAAIAAAACAPn/AAADAAIAAAABAPn/AAADAAIAAAAAAPn/AAADAAIAAAD///n/AAADAAIAAAAAAPj/AAADAAIAAAABAPj/AAADAAIAAAACAPj/AAADAAIAAAADAPj/AAADAAIAAAAEAPj/AAADAAIAAAAEAPf/AAADAAIAAAADAPf/AAADAAIAAAACAPf/AAADAAIAAAADAPz/AAADAAIAAAACAPz/AAADAAIAAAABAPz/AAADAAIAAAAAAPz/AAADAAIAAAD///z/AAADAAIAAAD+//z/AAADAAIAAAD9//z/AAADAAIAAAACAP3/AAADAAIAAAABAP3/AAADAAIAAAAAAP3/AAADAAIAAAD///3/AAADAAIAAAD+//3/AAADAAIAAAD9//3/AAADAAIAAAABAP7/AAADAAIAAAAAAP7/AAADAAIAAAD///7/AAADAAIAAAD+//7/AAADAAIAAAD9//7/AAADAAIAAAAAAP//AAADAAIAAAD/////AAADAAIAAAD+////AAADAAIAAAD9////AAADAAIAAAD8////AAADAAIAAAD8/wAAAAADAAIAAAD9/wAAAAADAAIAAAD+/wAAAAADAAIAAAD//wAAAAADAAIAAAAAAAAAAAADAAIAAAD8/wEAAAADAAIAAAD9/wEAAAADAAIAAAD+/wEAAAADAAIAAAD//wEAAAADAAIAAAAAAAEAAAADAAIAAAAAAAIAAAADAAIAAAD//wIAAAADAAIAAAD+/wIAAAADAAIAAAD9/wIAAAADAAIAAAD8/wIAAAADAAIAAAD8/wMAAAADAAIAAAD9/wMAAAADAAIAAAD+/wMAAAADAAIAAAD//wMAAAADAAIAAAAAAAMAAAADAAIAAAAAAAQAAAADAAIAAAD//wQAAAADAAIAAAD+/wQAAAADAAIAAAD9/wQAAAADAAIAAAD8/wQAAAADAAIAAAD8/wUAAAADAAIAAAD9/wUAAAADAAIAAAD+/wUAAAADAAIAAAD//wUAAAADAAIAAAAAAAUAAAADAAIAAAABAAwAAAADAAIAAAACAA0AAAADAAIAAAACAA4AAAADAAIAAAADAA8AAAADAAIAAAADABAAAAADAAIAAAAEABAAAAADAAIAAAAFABAAAAADAAIAAAAGABAAAAADAAIAAAAEAA8AAAADAAIAAAADAA4AAAADAAIAAAAAAAcAAAADAAIAAAAAAAYAAAADAAIAAAD//wYAAAADAAIAAAD+/wYAAAADAAIAAAD9/wYAAAADAAIAAAD9/wcAAAADAAIAAAD8/wcAAAADAAIAAAD8/wYAAAADAAIAAAD+/wcAAAADAAIAAAD//wcAAAADAAIAAAAAAAgAAAADAAIAAAD//wgAAAADAAIAAAD+/wgAAAADAAIAAAD9/wgAAAADAAIAAAD8/wgAAAADAAIAAAD8/wkAAAADAAIAAAD8/woAAAADAAIAAAD8/wsAAAADAAIAAAD9/wsAAAADAAIAAAD+/wsAAAADAAIAAAD//wsAAAADAAIAAAAAAAsAAAADAAIAAAAAAAoAAAADAAIAAAD//woAAAADAAIAAAD+/woAAAADAAIAAAD9/woAAAADAAIAAAD9/wkAAAADAAIAAAD+/wkAAAADAAIAAAD//wkAAAADAAIAAAAAAAkAAAADAAIAAAD9/wwAAAADAAIAAAD+/wwAAAADAAIAAAD//wwAAAADAAIAAAAAAAwAAAADAAIAAAABAA0AAAADAAIAAAAAAA0AAAADAAIAAAD//w0AAAADAAIAAAD+/w0AAAADAAIAAAD9/w0AAAADAAIAAAD9/w4AAAADAAIAAAD+/w4AAAADAAIAAAD//w4AAAADAAIAAAAAAA4AAAADAAIAAAABAA4AAAADAAIAAAACAA8AAAADAAIAAAABAA8AAAADAAIAAAAAAA8AAAADAAIAAAD//w8AAAADAAIAAAD+/w8AAAADAAIAAAD+/xAAAAADAAIAAAD//xAAAAADAAIAAAAAABAAAAADAAIAAAABABAAAAADAAIAAAACABAAAAADAAIAAAAGABEAAAADAAIAAAAFABEAAAADAAIAAAAEABEAAAADAAIAAAADABEAAAADAAIAAAACABEAAAADAAIAAAABABEAAAADAAIAAAAAABEAAAADAAIAAAD//xEAAAADAAIAAAAAABIAAAADAAIAAAABABIAAAADAAIAAAACABIAAAADAAIAAAADABIAAAADAAIAAAAEABIAAAADAAIAAAAFABIAAAADAAIAAAAGABIAAAADAAIAAAAGABMAAAADAAIAAAAFABMAAAADAAIAAAAEABMAAAADAAIAAAADABMAAAADAAIAAAACABMAAAADAAIAAAAGABQAAAADAAIAAAAFABQAAAADAAIAAAA=")
tile_set = SubResource("TileSet_pqp1s")

[node name="target" parent="Node" instance=ExtResource("6_ibrlq")]
position = Vector2(1248, 387)
scale = Vector2(3, 3)

[node name="chairPlayer" parent="Node" instance=ExtResource("3_4yq6w")]
position = Vector2(551, 571)

[node name="Camera2D" type="Camera2D" parent="Node/chairPlayer"]
zoom = Vector2(0.8, 0.8)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="SpinTimer" type="Timer" parent="Node/chairPlayer"]
wait_time = 3.0

[node name="AttackTimer" type="Timer" parent="Node/chairPlayer"]
wait_time = 9.0
one_shot = true

[node name="LEVEL1BOSS" parent="Node" instance=ExtResource("4_r2i3b")]
position = Vector2(554, 224)
script = ExtResource("5_rggpu")

[node name="raindropProjectile" parent="Node" instance=ExtResource("7_qmt4o")]
position = Vector2(458, 482)

[node name="lightningATK" parent="Node" instance=ExtResource("8_qdeqx")]
position = Vector2(797, 470)

[node name="PlayerHealthbars" type="CanvasLayer" parent="Node"]

[node name="RotationBar" type="TextureProgressBar" parent="Node/PlayerHealthbars"]
texture_filter = 1
offset_right = 241.0
offset_bottom = 64.0
scale = Vector2(2, 2)
texture_under = ExtResource("9_dyiga")
texture_progress = ExtResource("11_u2rw0")
texture_progress_offset = Vector2(74, 37)
script = ExtResource("11_ugj26")

[node name="Mainbar+health" type="TextureProgressBar" parent="Node/PlayerHealthbars"]
texture_filter = 1
offset_right = 256.0
offset_bottom = 64.0
scale = Vector2(2, 2)
value = 100.0
texture_under = ExtResource("11_6vnql")
texture_over = ExtResource("9_hrdq3")
texture_progress = ExtResource("10_pcunl")
texture_progress_offset = Vector2(77, 9)

[node name="BossHealthbars" type="CanvasLayer" parent="Node"]

[node name="TextureProgressBar" type="TextureProgressBar" parent="Node/BossHealthbars"]
texture_filter = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -482.0
offset_right = -241.0
offset_bottom = 64.0
grow_horizontal = 0
scale = Vector2(2, 2)
value = 100.0
fill_mode = 1
texture_over = ExtResource("14_is1kk")
texture_progress = ExtResource("15_5qddf")
texture_progress_offset = Vector2(6, 9)

[connection signal="timeout" from="Node/chairPlayer/SpinTimer" to="Node/chairPlayer" method="_on_spin_timer_timeout"]
[connection signal="timeout" from="Node/chairPlayer/AttackTimer" to="Node/chairPlayer" method="_on_attack_timer_timeout"]
